# ImageStore

./: .gitignore  Dockerfile  docker-compose.yml  postgres.Dockerfile  pyproject.toml
Django/ImageStore/ImageStore/: asgi.py  settings.py  test.rest  urls.py  views.py  wsgi.py
Django/ImageStore/account/: forms.py  models.py  test.rest  urls.py  views.py
Django/ImageStore/account/migrations/: 0001_initial.py
Django/ImageStore/imageStoreApp/: apps.py  forms.py  urls.py  utils.py  views.py
Django/ImageStore/imageStoreApp/static/css/: style.css
Django/ImageStore/imageStoreApp/static/imageStore/: style.css
Django/ImageStore/imageStoreApp/templates/imageStore/: index.html
Django/ImageStore/templates/: base.html
Django/ImageStore/templates/account/: login.html  registration.html
Django/ImageStore/templates/imageStore/: board_detail.html  create_board.html  create_pin.html  daily.html  favorite.html  home.html  pin_detail.html  test.html  user_page.html
Django/ImageStore/templates/registration/: login.html
FastAPI/: config.py  crud.py  main.py  models.py  route.py  schemas.py
FastAPI/api/: routers.py
FastAPI/api/endpoints/: board.py  image.py  pin.py  tag.py
FastAPI/images/: file
