[tool.poetry]
name = "imagestore"
version = "0.1.0"
description = ""
authors = ["Victor Polyakov <polyakov.victor21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
pyscopg2 = "^66.0.2"
pyjwt = "^2.8.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.7"
djangorestframework = "^3.14.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
